--- a/package.json
+++ b/package.json
@@ -29,6 +29,15 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "devDependencies": {},
-  "homepage": "https://hantumobil.github.io/star-w"
+  "homepage": "https://hantumobil.github.io/star-w",
+  "devDependencies": {
+    "husky": "^1.3.1",
+    "prettier": "1.16.4",
+    "pretty-quick": "^1.10.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
+  }
 }
