try prettier precommit #3

--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "pretty-quick --tab-width 4 --staged"
+      "pre-commit": "pretty-quick --staged"
     }
   }
 }
