--- a/package.json
+++ b/package.json
@@ -32,12 +32,16 @@
   "homepage": "https://hantumobil.github.io/star-w",
   "devDependencies": {
     "husky": "^1.3.1",
+    "lint-staged": "^8.1.5",
     "prettier": "1.16.4",
     "pretty-quick": "^1.10.0"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "pretty-quick --staged"
+      "pre-commit": "lint-staged"
     }
+  },
+  "lint-staged": {
+    "*.{js, json, css, md}": ["prettier --write --tab-width 4", "git add"]
   }
 }
