--- a/package.json
+++ b/package.json
@@ -33,8 +33,7 @@
   "devDependencies": {
     "husky": "^1.3.1",
     "lint-staged": "^8.1.5",
-    "prettier": "1.16.4",
-    "pretty-quick": "^1.10.0"
+    "prettier": "1.16.4"
   },
   "husky": {
     "hooks": {
@@ -42,6 +41,9 @@
     }
   },
   "lint-staged": {
-    "*.{js, json, css, md}": ["prettier --write --tab-width 4", "git add"]
+    "*.{js, json, css, md}": [
+      "prettier --write --tab-width 4",
+      "git add"
+    ]
   }
 }
