--- a/package.json
+++ b/package.json
@@ -29,8 +29,9 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "homepage": "https://hantumobil.github.io/star-w",
+  "homepage": "https://winndo.github.io/star-w",
   "devDependencies": {
+    "gh-pages": "^2.1.1",
     "husky": "^1.3.1",
     "lint-staged": "^8.1.5",
     "prettier": "1.16.4"
